Arreglo de errores en validación del parser

--- a/index.html
+++ b/index.html
@@ -9,14 +9,13 @@
   <meta charset="UTF-8">
 
   <link type="text/css" rel="stylesheet" href="style.css">
-  <link href='http://fonts.googleapis.com/css?family=Rokkitt:400,700|Lato:400,300' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
   <div id="cv">
     <div class="detalles">
       <div id="foto">
-        <img src="foto.jpg" alt="Sergio Alcaraz" />
+        <img src="foto.jpg" alt="Foto de Sergio Alcaraz" />
       </div>
 
       <div id="nombre">
@@ -38,7 +37,7 @@
 
       <section>
         <div class="titulo-seccion">
-          <h1>Historial Académico</h1>
+          <h2>Historial Académico</h2>
         </div>
 
         <div class="contenido-seccion">
@@ -59,7 +58,7 @@
 
       <section>
         <div class="titulo-seccion">
-          <h1>Experiencias laborales</h1>
+          <h2>Experiencias laborales</h2>
         </div>
 
         <div class="contenido-seccion">
@@ -96,11 +95,12 @@
 
       <section>
         <div class="titulo-seccion">
-          <h1>Pasatiempos</h1>
+          <h2>Pasatiempos</h2>
         </div>
 
         <div class="contenido-seccion">
           <article>
+            <h2 style="display: none;">Pasatiempos</h2>
             <ul class="no-ordenado">
               <li>Viajar</li>
               <li>Ver fútbol</li>
